2007-06-06  Satoshi Konno <skonno@cybergarage.org>
 * Added checking 64 bit support to the configure.in.

2007-03-20  Satoshi Konno <skonno@cybergarage.org>
 * Added a parameter, CgString, to return the result safety and the implementation without curl for the following functions.
   cg_net_uri_unescapestring() and cg_net_uri_escapestring().
 * Added a define, CG_USE_NET_URI_ESCAPESTRING_SKIP,in cg_net_uri_escapestring() and disabled the function not to skip only the first path.
 * Changed cg_upnp_device_httprequestrecieved() using the new cg_net_uri_unescapestring().
 * Added the following functions.
   cg_net_uri_isreservedchar()
   cg_net_uri_isunreservedchar()
   cg_net_uri_isescapechar()
   cg_net_uri_isalphanumchar()
 * Fixed cg_net_uri_escapestring() to use curl_escape() instead of curl_unescape().
 * Fixed cg_net_uri_unescapestring() to use curl_unescape() instead of curl_escape().

2007-03-18  Satoshi Konno <skonno@cybergarage.org>
 * Added CgInt64 to <typedef.h>
 * Changed the following functions to use CgInt64.
   cg_longlong2str()
   cg_http_packet_setheaderlonglong()
   cg_http_packet_getheaderlonglong()
 * Disable CG_USE_OPENSSL for Visual Studio projects as default.

2007-03-11  Satoshi Konno <skonno@cybergarage.org>
 * Added support of OpenSSL to socket functions in csocket.c.
 * Added CG_USE_OPENSSL define and --enable-openssl option to disable the SSL functions as default.
 * Added cg_https_request_post().
 * Changed a compiler flag about file functions from USE_CFILE to CG_USE_CFILE.
 * Added a framework of CppUnit.

2007-03-05  Satoshi Konno <skonno@cybergarage.org>
 * Changed cg_string_setnvalue() to use memcpy instead of strncpy().
 * Added a parameter of the string length for cg_string_setpointervalue() and to set a binary data.
 * Added a parameter of the string length for the following functions too. 
   cg_http_packet_setcontentpointer(), cg_http_request_setcontentpointer() and cg_http_response_setcontentpointer().